
        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

      - DateTime now uses pytz for time zone data. This means support
        for more time zones and up to date daylight saving time
        information.

    Bugs Fixed

      - Launchpad #267834: proper separation of HTTP header fields   
        using CRLF as requested by RFC 2616.

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #262313: respect the 'Expand macros when editing' flag
        when editing a page template through the ZMI

      - Launchpad #257276: fix for possible denial-of-service attack
        in PythonScript when passing an arbitrary module to the encode()
        or decode() of strings.

      - Launchpad #257269: 'raise SystemExit' with a PythonScript could shutdown
        a complete Zope instance

      - DateTime conversion of datetime objects with non-pytz tzinfo. 
        Timezones() returns a copy of the timezone list (allows tests to run).

      - LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers

      - Launchpad #246748: added 'immediate' option to sendXXX() methods
        for sending a mail immediately by-passing the zope.sendmail delivery
        mechanism

      - Launchpad #246290: fixed backward compatibility issue

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - fixed outdated transaction.commit(1) call in 
        ZODBMountPoint.SimpleTrailblazer

      - Fixed against-the-rules zope.conf option 'fast_listen' to read
        'fast-listen' (dash, not underscore).

      - Switch to branch of 'zope.testbrowser' external which suppresses
        over-the-wire tests.

      - Launchpad #164783: Indexes were migrated on initial creation of a
        ZODB.
